--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                 android:text="Free throw" />
         </LinearLayout>
 
-        <view
+        <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_marginTop="16dp"
